--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://www.1tamilmv.zip/index.php?/discover/all.xml/"
+          feed_list: "https://www.1tamilmv.eu/index.php?/discover/all.xml/"
           
